--- a/index.html
+++ b/index.html
@@ -1,64 +1,42 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
+    <title>Cha - Make task chaining</title>
+    <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Chajs.org : Cha&#39;s website" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Chajs.org</title>
+    <meta name="description" content="Make task chaining" />
+    <link rel="stylesheet" href="css/main.css">
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/chajs/chajs.org">View on GitHub</a>
+  <div class="topbar">
+      <p>GUI APP COMING SOON</p>
+  </div>
 
-          <h1 id="project_title">Chajs.org</h1>
-          <h2 id="project_tagline">Cha&#39;s website</h2>
+  <div class="banner">
+     <a href="https://github.com/chajs/cha">
+       <img width="256" height="256" src="https://f.cloud.github.com/assets/677114/2333826/7f36d7ea-a471-11e3-99ea-fd8567069b7d.png">
+     </a>
+     <h1><a href="https://github.com/chajs/cha">cha</a></h1>
+     <p>Make task chaining</p>
+     <p>
+       <a class="ui-button" href="https://github.com/chajs/cha">Library</a>
+       <a class="ui-button" href="https://github.com/chajs/cha-cli">CLI APP</a>
+       <a class="ui-button" href="https://github.com/chajs/cha-app">GUI APP</a>
+     </p>
+  </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/chajs/chajs.org/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/chajs/chajs.org/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="cha" class="anchor" href="#cha"><span class="octicon octicon-link"></span></a>Cha</h1>
-
-<blockquote>
-<p>Coming soon</p>
-</blockquote>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Chajs.org maintained by <a href="https://github.com/chajs">chajs</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("49188566");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
+    ga('create', 'UA-49188566-1', 'chajs.org');
+    ga('send', 'pageview');
+  </script>
 
   </body>
 </html>
