Update topbar text.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
   <body>
 
   <div class="topbar">
-      <p>GUI APP COMING SOON</p>
+      <h1><a href="https://github.com/chajs/cha">cha</a></h1>
   </div>
 
   <div class="banner">
      <a href="https://github.com/chajs/cha">
        <img width="256" height="256" src="https://f.cloud.github.com/assets/677114/2333826/7f36d7ea-a471-11e3-99ea-fd8567069b7d.png">
      </a>
-     <h1><a href="https://github.com/chajs/cha">cha</a></h1>
      <p>Make task chaining</p>
      <p>
-       <a class="ui-button" href="https://github.com/chajs/cha">Library</a>
+       <a class="ui-button" href="https://github.com/chajs/cha">Cha Library</a>
        <a class="ui-button" href="https://github.com/chajs/cha-cli">CLI APP</a>
        <a class="ui-button" href="https://github.com/chajs/cha-app">GUI APP</a>
      </p>
