The format of logo change to svg.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <div class="banner">
      <a href="https://github.com/chajs/cha">
-       <img width="256" height="256" src="https://f.cloud.github.com/assets/677114/2333826/7f36d7ea-a471-11e3-99ea-fd8567069b7d.png">
-     </a>
+       <img width="256" height="256" src="img/cha.svg">   
+   </a>
      <p>Make task chaining</p>
      <p>
        <a class="ui-button" href="https://github.com/chajs/cha">Cha Library</a>
