--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
 
   <div class="topbar">
-      <h1><a href="https://github.com/chajs/cha">cha</a></h1>
+      <h1><img class="logo" src="img/cha.svg"><a href="https://github.com/chajs/cha">cha</a></h1>
   </div>
 
   <div class="banner">
+     <h2 class="hero">Make task chaining</h2>
      <a href="https://github.com/chajs/cha">
-       <img width="256" height="256" src="img/cha.svg">   
-   </a>
-     <p>Make task chaining</p>
+       <img src="img/app.png">
+     </a>
      <p>
        <a class="ui-button" href="https://github.com/chajs/cha">Cha Library</a>
        <a class="ui-button" href="https://github.com/chajs/cha-cli">CLI APP</a>
