Add javascript task section.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,32 @@
       <h1><img class="logo" src="img/cha.svg"><a href="https://github.com/chajs/cha">cha</a></h1>
   </div>
 
-  <div class="banner">
-     <h2 class="hero">Make task chaining</h2>
+  <section class="banner">
+     <h2 class="heading">Make task chaining</h2>
      <a href="https://github.com/chajs/cha">
        <img src="img/app.png">
      </a>
      <p>
        <a class="ui-button" href="https://github.com/chajs/cha">Cha Library</a>
-       <a class="ui-button" href="https://github.com/chajs/cha-cli">CLI APP</a>
-       <a class="ui-button" href="https://github.com/chajs/cha-app">GUI APP</a>
+       <a class="ui-button" href="https://github.com/chajs/cha-cli">CLI App</a>
+       <a class="ui-button" href="https://github.com/chajs/cha-app">GUI App</a>
      </p>
-  </div>
+  </section>
 
+  <section class="tasks">
+
+      <a href="https://github.com/taskjs" class="heading">
+        JavaScript
+        <img alt="JavaScript Task" height="60" width="60" src="https://avatars1.githubusercontent.com/u/5458037?s=120" >
+      </a>
+
+      <ul class="packages" id="packages">
+
+      </ul>
+
+  </section>
+
+  <script src="js/main.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
